--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,12 +4,19 @@ services:
   master:
     image: hadoop
     container_name: master
-    hostname: master
+    hostname: master # TODO: Change this to name-SID-1
     ports:
       - "8020:8020" # fs.defaultFS
       - "9870:9870" # NameNode Web UI
       - "9868:9868" # Secondary NameNode Web UI
-    command: bash -c "service ssh restart && hdfs namenode -format && start-all.sh && tail -f /dev/null"
+    command: bash -c "
+              service ssh restart && 
+              hdfs namenode -format &&
+              start-all.sh &&
+              echo 1 > /root/zookeeper/tmp/myid &&
+              zkServer.sh start &&
+              start-hbase.sh &&
+              tail -f /dev/null"
     networks:
       - hadoop-network
     depends_on:
@@ -20,24 +27,36 @@ services:
   slave1:
     image: hadoop
     container_name: slave1
-    hostname: slave1
-    command: bash -c "service ssh restart &&tail -f /dev/null"
+    hostname: slave1 # TODO: Change this to name-SID-2
+    command: bash -c "
+              service ssh restart && 
+              echo 2 > /root/zookeeper/tmp/myid &&
+              zkServer.sh start &&
+              tail -f /dev/null"
     networks:
       - hadoop-network
 
   slave2:
     image: hadoop
     container_name: slave2
-    hostname: slave2
-    command: bash -c "service ssh restart &&tail -f /dev/null"
+    hostname: slave2 # TODO: Change this to name-SID-3
+    command: bash -c "
+              service ssh restart && 
+              echo 3 > /root/zookeeper/tmp/myid &&
+              zkServer.sh start &&
+              tail -f /dev/null"
     networks:
       - hadoop-network
 
   slave3:
     image: hadoop
     container_name: slave3
-    hostname: slave3
-    command: bash -c "service ssh restart &&tail -f /dev/null"
+    hostname: slave3 # TODO: Change this to name-SID-4
+    command: bash -c "
+              service ssh restart && 
+              echo 4 > /root/zookeeper/tmp/myid &&
+              zkServer.sh start &&
+              tail -f /dev/null"
     networks:
       - hadoop-network
 
